--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,18 +16,18 @@
   <body>
     <header>
       <h1 id="title">
-        <a href="/about.html" title="About">Mark Mims</a> writes online <a href="/" title="Home">here</a>.
+        Distributed Memory
       </h1>
       <h2 id="subtitle">
-        See also the <a href="/archive.html" title="Archive">archive</a>
+        A collection of random thoughts by <a href="/about.html" title="About">Mark Mims</a>
       </h2>
     </header>
     <div id="wrapper">
       {{ content }}
       <footer id="footer">
         <a href="/" title="Home">Home</a> &bull;
-        <a href="/about.html" title="About the author and site">About</a> &bull;
-        <a href="/archive.html" title="Archived writing">Archive</a> &bull;
+        <a href="/about.html" title="About me">About</a> &bull;
+        <a href="/archive.html" title="Older Posts">Archive</a> &bull;
         <form action="http://www.google.com/cse" id="cse-search-box">
           <div>
             <input type="hidden" name="cx" value="000652178004161548235:gnplrkdmhbu" />
