alex layout for blog

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,16 +10,18 @@
     <link rel="alternate" type="application/atom+xml" title="Mark Mims - Atom" href="/atom.xml" />
     <link href='http://pip.verisignlabs.com/server' rel='openid.server' />
     <link href='http://mmm.pip.verisignlabs.com/' rel='openid.delegate' />
-    <title>Mark Mims &mdash; {{ page.title }}</title>
+    <title>Mark Mims, Ph.D. &mdash; {{ page.title }}</title>
     {% include analytics.html %}
   </head>
   <body>
     <header>
       <h1 id="title">
-        Distributed Memory
+        Snippets, Thoughts, and Links
       </h1>
       <h2 id="subtitle">
-        A collection of random thoughts by <a href="/about.html" title="About">Mark Mims</a>
+        ...chaotic bits of
+        <a href="http://markmims.com/" title="About">my</a>
+        distributed hybrid associative memory
       </h2>
     </header>
     <div id="wrapper">
