--- a/css/screen.css
+++ b/css/screen.css
@@ -1,44 +1,112 @@
-/* elements */
-* {
-  margin: 0;
-  padding: 0;
+/* line 1 */
+ul {
+  list-style: none;
+  text-indent: 1em;
+  margin: 10px;
+}
+/* line 6 */
+ul li {
+  margin: 10px;
+  padding-left: 5px;
 }
 
+/* line 11 */
+dl {
+  text-indent: 1em;
+  margin-left: 0px;
+  padding-left: 0px;
+}
+/* line 16 */
+dl dd {
+  margin-left: 5px;
+  padding-left: 30px;
+}
+
+/* line 21 */
+html {
+  text-align: center;
+}
+
+/* line 25 */
 body {
-  background-color: #edf1f3;
-  color: #222;
-  font-family: 'Times New Roman', 'Times', serif;
-  line-height: 1.4em;
-  margin: 20px auto 18px 15%;
+  font-family: georgia, tahoma, serif;
+  font-size: 100%;
+  line-height: 1.636em;
+  color: white;
+  text-align: center;
+  background: #101418;
 }
 
-a:link {
-  color: #336699;
+/* line 33 */
+#title {
+  background: #101418 url(../images/banner-silverbump.png) repeat-x;
+}
+
+/* line 37 */
+#container {
+  position: relative;
+  width: 1280px;
+  margin: 0 auto;
+  background: url(../images/bg-clean.jpg) no-repeat;
+  z-index: 0;
+  font-size: 1.125em;
+  text-align: left;
+  top: 0;
+  left: 0;
+}
+
+/* line 49 */
+#resume {
+  position: relative;
+  width: 200px;
+  float: right;
+  padding: 20px;
+  margin-right: 80px;
+  background: green;
+  z-index: 20;
+  border: 10px solid white;
+}
+/* line 59 */
+#resume a {
   text-decoration: none;
+  color: white;
 }
-a:visited {
-  color: #660000;
+/* line 63 */
+#resume a:hover {
   text-decoration: none;
+  color: grey;
+  background: white;
 }
-a:hover {
-  color: #336699;
-  text-decoration: underline;
-}
-
-a img { border-width: 0; }
-
-blockquote {
-  border-left: 1px solid #222;
-  line-height: 18px;
-  font-size: 11pt;
-  font-style: italic;
-  margin: 20px;
+/* line 68 */
+#resume dd {
+  font-family: monospace;
+  margin-left: 2px;
   padding-left: 10px;
 }
 
-code {
-  font-family: 'DejaVu Sans Mono', 'Courier New', monospace;
-  font-size: 12pt;
+/* line 71 */
+#mugshot {
+  background: white;
+  margin: 20px 48px 20px 48px;
+  border: 5px solid white;
+  text-align: center;
+  padding: 10px;
+}
+
+/* line 79 */
+.white_box {
+  font-family: "Trebuchet MS", Verdana, sans-serif;
+  position: relative;
+  left: 100px;
+  top: 60px;
+  width: 760px;
+  padding: 50px 200px 50px 60px;
+  background: white;
+  color: black;
+  z-index: 15;
+  opacity: 0.8;
+  -moz-opacity: 0.8;
+  filter: alpha(opacity=80);
 }
 
 h1, h2, h3, #footer {
@@ -64,28 +132,26 @@ h3 {
   line-height: 22px;
 }
 
-li { margin-bottom: 4px; }
-
-p, ul, ol { margin-bottom: 18px; }
-
-ul, ol {
-  margin-left: 2em;
+/* line 93 */
+#bio {
+  width: 550px;
 }
-
-ul { list-style-type: square; }
-
-/* html5 */
-header, footer, nav, article { display: block; }
-
-/* classes */
-.book-cover {
-  float: left;
-  margin-right: 10px;
+/* line 95 */
+#bio p:first-child:first-letter {
+  font-family: "Comic Sans MS", cursive;
+  font-weight: bold;
+  font-size: 700%;
 }
-
-.fusiontext a, .fusiontext a:hover, .fusiontext a:visited {
-  color: #222;
-  text-decoration: none;
+/* line 100 */
+#bio #skills {
+  font-weight: bold;
+  list-style: none;
+  margin: 60px 60px 60px 120px;
+}
+/* line 105 */
+#bio #skills ul {
+  font-weight: normal;
+  font-size: smaller;
 }
 
 .post {
@@ -104,43 +170,3 @@ header, footer, nav, article { display: block; }
   text-align: right;
 }
 
-/* ids */
-#cse-search-box {
-  margin-top: 10px;
-}
-
-#footer {
-  font-size: 14pt;
-}
-
-#fusionad {
-  float: right;
-  margin: 75px 200px 0 10px;
-  font-family: 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
-  font-size: 10pt;
-  text-align: center;
-  width: 150px;
-}
-
-#intro {
-  color: #666;
-  font-size: 22pt;
-  margin-bottom: 24pt;
-  margin-top: 24pt;
-}
-
-#subtitle, #title { color: #333; }
-
-#subtitle {
-  font-size: 24pt;
-}
-
-#title {
-  font-size: 32pt;
-}
-
-#wrapper {
-  max-width: 40em;
-  min-width: 30em;
-  width: 32em;
-}
