--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta content='Mark Mims (www.agiledynamics.com)' name='author' />
-    <link href='favicon.ico' rel='icon' type='image/ico' />
-    <link href='favicon.ico' rel='shortcut icon' type='image/ico' />
+    <link href='/favicon.ico' rel='icon' type='image/ico' />
+    <link href='/favicon.ico' rel='shortcut icon' type='image/ico' />
     <link href="/css/normalize.css" media="all" rel="stylesheet" type="text/css"/><link href="/css/screen.css" media="all" rel="stylesheet" type="text/css"/>
     <link href='http://pip.verisignlabs.com/server' rel='openid.server' />
     <link href='http://mmm.pip.verisignlabs.com/' rel='openid.delegate' />
@@ -12,7 +12,7 @@
   </head>
   <body>
     <div id='title'>
-      <img src='images/title-blog.png' />
+      <img src='/images/title-blog.png' />
     </div>
     <div id='container'>
       <div id='resume'>
