--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,10 +1,15 @@
 ---
 layout: default
 ---
-<h2 id="intro">An individual post follows.</h2>
-<article class="post">
-{{ content }}
-<time class="signoff" datetime="{{ page.date | date: "%Y-%m-%d" }}">
-  &mdash;{{ page.date | date: "%b %d, %Y" }}
-</time>
-</article>
+
+<div class="post" id='post'>
+  <h1><a href='{{ post.url }}'>{{ page.title }}</a></h1>
+  <p class='meta'>
+    {{ page.date | date: '%Y-%m-%d' }}
+    {% unless page.tags == empty %}
+      (<strong>{{ page.tags | join: '</strong>, <strong>' }}</strong>)
+    {% endunless %}
+  </p>
+  {{ content }}
+</div>
+
