--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <div id='title'>
-      <img src='/images/title-blog.png' />
+      <a href="/"><img src='/images/title-blog.png' /></a>
     </div>
     <div id='container'>
       <div id='resume'>
