--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,9 @@
     </div>
     <div id='container'>
       <div id='resume'>
+        <div id='mugshot'>
+          <img alt="Mug" src="images/mug.jpg"/>
+        </div>
         <dl>
           <dt>
             Email (and GTalk):
