resume to sidebar

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,9 +15,39 @@
       <a href="/"><img src='/images/title-blog.png' /></a>
     </div>
     <div id='container'>
-      <div id='resume'>
+      <div id='sidebar'>
         <div id='mugshot'>
           <img alt="Mug" src="images/mug.jpg"/>
+        </div>
+        <div id="bio">
+          <p>
+            Mark Mims, Ph.D.
+          </p>
+          <p>
+            Hi, I'm a software developer and a Physics geek.
+          </p>
+          <p>
+            I love helping people use software to solve real-world
+            business problems...  especially the kind that involve
+            crunching and munching lots of data in the process.
+          </p>
+          <p>
+            Clouds and Big Data are both rightfully all the rage
+            right now, so I find I spend most of my time working in that dimly-lit
+            space where Dealing with Data (TM) meets Infrastructure
+            Engineering.
+          </p>
+          <p>
+            I'm really psyched to work for
+            <a href="http://canonical.com/">Canonical</a>
+            , the people behind
+            <a href="http://ubuntu.com/">Ubuntu.</a>
+          </p>
+          <p>
+            Our team builds DevOps tools and
+            <a href="http://ensemble.ubuntu.com/">Ensemble</a>
+            formulas to insure Ubuntu remains the clear and easy choice as a Cloud and BigData OS.
+          </p>
         </div>
         <dl>
           <dt>
