--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
     <div id='container'>
       <div id='sidebar'>
         <div id='mugshot'>
-          <img alt="Mug" src="images/mug.jpg"/>
+          <img alt="Mug" src="/images/mug.jpg"/>
         </div>
         <div id="bio">
           <p>
