separate blog from homepage

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,8 +27,9 @@
     <div id="wrapper">
       {{ content }}
       <footer id="footer">
-        <a href="/" title="Home">Home</a> &bull;
-        <a href="/about.html" title="About me">About</a> &bull;
+        <a href="http://markmims.com/" title="Home">Home</a> &bull;
+        <a href="/" title="Blog">Blog</a> &bull;
+        <a href="http://markmims.com/" title="About me">About</a> &bull;
         <a href="/archive.html" title="Older Posts">Archive</a> &bull;
         <form action="http://www.google.com/cse" id="cse-search-box">
           <div>
