separate blog and main site

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,13 +31,13 @@
         -->
         <ul class="nav">
           <li>
-            <a href="/" title="Home">Home</a>
+            <a href="http://markmims.com/" title="Home">Home</a>
           </li>
           <li>
             <a href="/" title="Blog">Blog</a>
           </li>
           <li>
-            <a href="/about.html" title="About">About</a>
+            <a href="http://markmims.com/" title="About">About</a>
           </li>
           <li>
             <a href="/archive.html" title="Older Posts">Archive</a>
@@ -59,9 +59,9 @@
           {{ content }}
 
           <footer id="footer">
-            <a href="/" title="Home">Home</a> &bull;
+            <a href="http://markmims.com/" title="Home">Home</a> &bull;
             <a href="/" title="Blog">Blog</a> &bull;
-            <a href="/about.html" title="About me">About</a> &bull;
+            <a href="http://markmims.com/" title="About me">About</a> &bull;
             <a href="/archive.html" title="Older Posts">Archive</a>
           </footer>
           
