--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,8 +9,9 @@
     <link href='http://mmm.pip.verisignlabs.com/' rel='openid.delegate' />
     <title>Mark Mims, Ph.D. &mdash; {{ page.title }}</title>
     {% include analytics.html %}
+    {% include google_search.html %}
   </head>
-  <body onload="document.googlesearch.q.focus();">
+  <body onload="document.search.q.focus();">
     <div id='title'>
       <a href="/"><img src='/images/title-blog.png' /></a>
     </div>
@@ -40,14 +41,12 @@
       <div class='white_box'>
         <div id="wrapper">
 
-          <form action="http://www.google.com/cse" id="cse-search-box" name="googlesearch">
-            <div class="search" id="search">
-              <input type="hidden" name="cx" value="000652178004161548235:gnplrkdmhbu" />
-              <input type="hidden" name="ie" value="UTF-8" />
-              <input type="text" name="q" size="40" />
-              <input type="submit" name="sa" value="Search" />
-            </div>
-          </form>
+          <div class="search" id="cse">
+            <input type="hidden" name="cx" value="000652178004161548235:gnplrkdmhbu" />
+            <input type="hidden" name="ie" value="UTF-8" />
+            <input type="text" name="q" size="40" />
+            <input type="submit" name="sa" value="Search" />
+          </div>
 
           {{ content }}
 
