ok, layout looks good enough for now

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,12 +20,9 @@
           <img alt="Mug" src="/images/mug.jpg"/>
         </div>
         <div id="name">
-          <a href="/about.html" title="About">Mark M. Mims, Ph.D.</a>
+          <a href="http://markmims.com/" title="About">Mark M. Mims, Ph.D.</a>
         </div>
         <ul class="nav">
-          <li>
-            <a href="http://markmims.com/" title="Home">Home</a>
-          </li>
           <li>
             <a href="/" title="Blog">Blog</a>
           </li>
@@ -52,7 +49,6 @@
           {{ content }}
 
           <footer id="footer">
-            <a href="http://markmims.com/" title="Home">Home</a> &bull;
             <a href="/" title="Blog">Blog</a> &bull;
             <a href="http://markmims.com/" title="About me">About</a> &bull;
             <a href="/archive.html" title="Older Posts">Archive</a>
