--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,14 +20,15 @@
           <img alt="Mug" src="/images/mug.jpg"/>
         </div>
         <div id="name">
-          <a href="http://markmims.com/" title="About">Mark M. Mims, Ph.D.</a>
+          <a href="http://markmims.com/" title="About Me">Mark Mims</a>
+          (<a href="http://twitter.com/m_3" title="twitter.com/m_3">@m_3</a>)
         </div>
         <ul class="nav">
           <li>
             <a href="/" title="Blog">Blog</a>
           </li>
           <li>
-            <a href="http://markmims.com/" title="About">About</a>
+            <a href="http://markmims.com/" title="About Me">About</a>
           </li>
           <li>
             <a href="/archive.html" title="Older Posts">Archive</a>
@@ -50,7 +51,7 @@
 
           <footer id="footer">
             <a href="/" title="Blog">Blog</a> &bull;
-            <a href="http://markmims.com/" title="About me">About</a> &bull;
+            <a href="http://markmims.com/" title="About Me">About</a> &bull;
             <a href="/archive.html" title="Older Posts">Archive</a>
           </footer>
           
