--- a/css/screen.css
+++ b/css/screen.css
@@ -56,7 +56,6 @@ body {
   position: relative;
   width: 1280px;
   margin: 0 auto;
-  background: url(../images/overlay.jpg) no-repeat;
   z-index: 0;
   font-size: 1.125em;
   text-align: left;
@@ -66,6 +65,13 @@ body {
 
 /* line 49 */
 #sidebar {
+  -webkit-box-shadow: #FFFFFF 0 -1px 0px, #222222 0 0 10px;
+  border-bottom-left-radius: 5px 5px;
+  border-bottom-right-radius: 5px 5px;
+  border-top-left-radius: 5px 5px;
+  border-top-right-radius: 5px 5px;
+  box-shadow: #FFFFFF 0 1px 0;
+  /* text-shadow: #FFFFFF 0 1px 0; */
   position: relative;
   width: 240px;
   float: right;
@@ -122,6 +128,13 @@ body {
 
 /* line 79 */
 .white_box {
+  -webkit-box-shadow: #FFFFFF 0 -1px 0px, #222222 0 0 10px;
+  border-bottom-left-radius: 5px 5px;
+  border-bottom-right-radius: 5px 5px;
+  border-top-left-radius: 5px 5px;
+  border-top-right-radius: 5px 5px;
+  box-shadow: #FFFFFF 0 1px 0;
+  /* text-shadow: #FFFFFF 0 1px 0; */
   position: relative;
   left: 100px;
   top: 100px;
@@ -220,6 +233,12 @@ h3 {
     overflow: auto;
 }
 
+.post h1 {
+  -webkit-box-shadow: #FFFFFF 0 -1px 0px, #222222 0 0 10px;
+  border-radius: 4px 4px 4px 4px;
+  box-shadow: #FFFFFF 0 1px 0;
+  /* text-shadow: #FFFFFF 0 1px 0; */
+}
 /*
 .post {
   border-bottom: 1px solid #222;
