--- a/css/screen.css
+++ b/css/screen.css
@@ -33,7 +33,8 @@ html {
 
 /* line 25 */
 body {
-  -webkit-background-size: 100%;
+  /* -webkit-background-size: 100%; */
+  -webkit-background-size: 1280px 1024px;
   background-attachment: fixed;
   background-color: #101418;
   background-image: url(../images/bg-clean.jpg);
