--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
     <div id='container'>
       <div id='sidebar'>
         <div id="name">
-          <a href="http://markmims.com/" title="About Me">Mark Mims</a>
+          <a href="/about.html" title="About Me">Mark Mims</a>
           (<a href="http://twitter.com/m_3" title="twitter.com/m_3">@m_3</a>)
         </div>
         <ul class="nav">
@@ -25,7 +25,7 @@
             <a href="/" title="Blog">Blog</a>
           </li>
           <li>
-            <a href="http://markmims.com/" title="About Me">About</a>
+            <a href="/about.html" title="About Me">About</a>
           </li>
           <li>
             <a href="/archive.html" title="Older Posts">Archive</a>
@@ -48,7 +48,7 @@
 
           <footer id="footer">
             <a href="/" title="Blog">Blog</a> &bull;
-            <a href="http://markmims.com/" title="About Me">About</a> &bull;
+            <a href="/about.html" title="About Me">About</a> &bull;
             <a href="/archive.html" title="Older Posts">Archive</a>
           </footer>
           
