--- a/css/screen.css
+++ b/css/screen.css
@@ -115,10 +115,9 @@ body {
   padding-left: 10px;
 }
 
-/* line 71 */
 #mugshot {
   background: white;
-  margin: 20px 18px 20px 18px;
+  margin: 20px 48px 20px 48px;
   border: 5px solid white;
   text-align: center;
   padding: 10px;
@@ -188,10 +187,11 @@ h3 {
 
 /* line 93 */
 #bio {
-  width: 550px;
+  /* width: 550px; */
 }
 /* line 95 */
 #bio p:first-child:first-letter {
+  font-family: "Comic Sans MS", cursive;
   font-weight: bold;
   font-size: 700%;
 }
@@ -298,3 +298,34 @@ code {
 .gsc-control-cse {
   background: white;
 }
+
+/* line 54 */
+#about-sidebar {
+  -webkit-box-shadow: white 0 -1px 0px, #222222 0 0 10px;
+  border-radius: 5px 5px 5px 5px;
+  box-shadow: white 0 1px 0;
+  position: relative;
+  width: 300px;
+  float: right;
+  padding: 20px;
+  margin-right: 80px;
+  background: green;
+  z-index: 20;
+  border: 10px solid white;
+}
+/* line 68 */
+#about-sidebar a {
+  text-decoration: none;
+  color: white;
+}
+/* line 72 */
+#about-sidebar a:hover {
+  text-decoration: none;
+  color: grey;
+  background: white;
+}
+/* line 77 */
+#about-sidebar dd {
+  font-family: monospace;
+}
+
