--- a/source/_includes/custom/asides/about.html
+++ b/source/_includes/custom/asides/about.html
@@ -25,9 +25,9 @@
           </p>
 
           <p>
-            All of my past experience is data science... 
+            I am an experienced data scientist... 
             both in the enterprise and as an entrepreneur.
-            I have a somewhat up-to-date resume in  
+            I have a somewhat out-of-date resume in  
             (<a href="/MarkMims-resume.html" title="Resume for Mark Mims">html</a>
             |
             <a href="/MarkMims-resume.txt" title="Resume for Mark Mims">text</a>
