--- a/source/_includes/custom/asides/about.html
+++ b/source/_includes/custom/asides/about.html
@@ -36,7 +36,7 @@
           </p>
 
           <p>
-            My Ph.D. is in Physics with research in Quantum Computation.
+            I have a Ph.D. in Physics for research in Quantum Computation.
             Here's a copy of my <a href="/MarkMims-dissertation.pdf">dissertation</a>
             on Noise in Quantum Algorithms.
           </p>
