adding links to about.me/m_3

--- a/source/_includes/custom/asides/about.html
+++ b/source/_includes/custom/asides/about.html
@@ -45,6 +45,9 @@
 
         <dl>
           <dd>
+            <a href="http://about.me/m_3">About.Me</a>
+          </dd>
+          <dd>
             <a href="http://github.com/mmm">GitHub</a>
           </dd>
           <dd>
