wording on the bio

--- a/source/_includes/custom/asides/about.html
+++ b/source/_includes/custom/asides/about.html
@@ -27,7 +27,7 @@
           <p>
             Most of my past experience is in data science...
             both in the enterprise and as an entrepreneur.
-            I have a somewhat out-of-date resume in  
+            I have a resume in  
             (<a href="/MarkMims-resume.html" title="Resume for Mark Mims">html</a>
             |
             <a href="/MarkMims-resume.txt" title="Resume for Mark Mims">text</a>
