fix facebook link

--- a/source/_includes/custom/asides/about.html
+++ b/source/_includes/custom/asides/about.html
@@ -63,7 +63,7 @@
             <a href="https://plus.google.com/102162869179154701641/">Google+</a>
           </dd>
           <dd>
-            <a href="http://utexas.facebook.com/profile.php?id=532511774">Facebook</a>
+            <a href="https://www.facebook.com/mark.mims">Facebook</a>
           </dd>
           <dd>
             <a href="mailto:mark.mims@gmail.com">mark.mims@gmail.com</a>
