--- a/source/_includes/custom/asides/about.html
+++ b/source/_includes/custom/asides/about.html
@@ -41,17 +41,13 @@
             on Noise in Quantum Algorithms.
           </p>
 
-        </div>
 
         <dl>
+          <dt>
+            Social:
+          </dt>
           <dd>
             <a href="http://about.me/m_3">About.Me</a>
-          </dd>
-          <dd>
-            <a href="http://github.com/mmm">GitHub</a>
-          </dd>
-          <dd>
-            <a href="http://launchpad.net/~mark-mims/">LaunchPad</a>
           </dd>
           <dd>
             <a href="http://twitter.com/m_3/">Twitter</a>
@@ -71,6 +67,28 @@
           <dd>
             <a href="callto:+1-512-981-6467">voice:+1(512)981-6467</a>
           </dd>
+        </dl>
+
+        <br/>
+
+        <dl>
+          <dt>
+            Code:
+          </dt>
+          <dd>
+            <a href="http://github.com/mmm">GitHub</a>
+          </dd>
+          <dd>
+            <a href="http://launchpad.net/~mark-mims/">LaunchPad</a>
+          </dd>
+        </dl>
+
+        <br/>
+
+        <dl>
+          <dt>
+            Keys:
+          </dt>
           <dd>
             <a href="/MarkMims-gpg-key.asc" title="fingerprint = C14D 0796 664C 62F9 C104  C149 F213 1D81 237F D12C">GPG public key</a>
             (
@@ -84,8 +102,11 @@
             )
           </dd>
         </dl>
+
+        </div>
+
       </div>
-      <br>
+      <br/>
     </div>
     <script type='text/javascript'>
       var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
