update job info

--- a/source/_includes/custom/asides/about.html
+++ b/source/_includes/custom/asides/about.html
@@ -17,15 +17,9 @@
           </p>
 
           <p>
-            I'm thrilled to work on the <a href="http://www.ubuntu.com/server">Ubuntu Server</a>
-            Team for <a href="http://www.canonical.com/">Canonical</a>.
-            We're building <a href="http://juju.ubuntu.com/">DevOps tools</a> and
-            helping folks learn to use these tools to architect and manage their
-            infrastructure.
-          </p>
-
-          <p>
-            Most of my past experience is in data science...
+            I'm happily employed as a chimp at <a href="http://www.infochimps.com/">Infochimps</a>,
+            building managed datascience pipelines for people solving problems in a number of different industries.
+            My past experience is mostly data science and devops...
             both in the enterprise and as an entrepreneur.
             I have a resume in  
             (<a href="/MarkMims-resume.html" title="Resume for Mark Mims">html</a>
