tweak some wording

--- a/source/_includes/custom/asides/about.html
+++ b/source/_includes/custom/asides/about.html
@@ -17,8 +17,11 @@
           </p>
 
           <p>
-            I'm happily employed as a chimp at <a href="http://www.infochimps.com/">Infochimps</a>,
-            building managed datascience pipelines for people solving problems in a number of different industries.
+            I'm happily employed by <a href="http://www.infochimps.com/">Infochimps</a> where we 
+            build managed datascience pipelines and tools.
+          </p>
+
+          <p>
             My past experience is mostly data science and devops...
             both in the enterprise and as an entrepreneur.
             I have a resume in  
