updated bio with new job

--- a/source/_includes/custom/asides/about.html
+++ b/source/_includes/custom/asides/about.html
@@ -12,17 +12,20 @@
           </p>
 
           <p>
-            <em>Data Plumbing</em> is where Data Science meets DevOps,
+            <em>Data Plumbing</em> is where Data Science meets DevOps, 
             and that's where I happily spend most of my time.
           </p>
 
           <p>
-            I'm happily employed by <a href="http://www.infochimps.com/">Infochimps</a> where we 
-            build managed datascience pipelines and tools.
+            I work with a talented team of consultants at 
+            <a href="http://www.svds.com/">Silicon Valley Data Science</a>,
+            where we help clients tackle their toughest
+            data science problems.
           </p>
 
           <p>
-            My past experience is mostly data science and devops...
+            My past experience is mostly data science, devops, and software
+            engineering...
             both in the enterprise and as an entrepreneur.
             I have a resume in  
             (<a href="/MarkMims-resume.html" title="Resume for Mark Mims">html</a>
