--- a/source/_includes/custom/asides/about.html
+++ b/source/_includes/custom/asides/about.html
@@ -3,7 +3,7 @@
     <div id='container'>
       <div id='about-sidebar'>
         <div id='mugshot'>
-          <img alt="Mug" src="/images/mug.jpg"/>
+          <img alt="Mug" src="/images/phonebooth.jpg"/>
         </div>
 
         <div id='bio'>
