--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -1,7 +1,7 @@
 // This File is imported last, and will override other styles in the cascade
 // Add styles here to make changes without digging in too much
 html {
-     background: url(/images/bg-clean.png) no-repeat center center fixed;
+     background: url(/images/aguille.jpg) no-repeat center center fixed;
      background-size: cover;
 }
 body>header {
