updated about sidebar

--- a/source/_includes/custom/asides/about.html
+++ b/source/_includes/custom/asides/about.html
@@ -12,15 +12,15 @@
           </p>
 
           <p>
-            <em>Data Plumbing</em> is where Data Science meets DevOps, 
-            and that's where I happily spend most of my time.
+            <em>Data Plumbing</em> / Data Engineering is where Data Science
+            meets DevOps, and that's where I happily spend most of my time.
           </p>
 
           <p>
-            I work with a talented team of consultants at 
-            <a href="http://www.svds.com/">Silicon Valley Data Science</a>,
-            where we help clients tackle their toughest
-            data science problems.
+            I'm thrilled to be part of the
+            <a href="http://digitalocean.com/">DigitalOcean</a>
+            team, working hard to build better cloud services
+            for developers and data scientists around the world!
           </p>
 
           <p>
