--- a/source/_includes/custom/asides/about.html
+++ b/source/_includes/custom/asides/about.html
@@ -61,6 +61,9 @@
           <dd>
             <a href="callto:+1-512-981-6467">voice:+1(512)981-6467</a>
           </dd>
+          <dd>
+            <a href="https://keybase.io/m_3">Keybase</a>
+          </dd>
         </dl>
 
         <br/>
