prefer twitter to disqus

--- a/source/_layouts/post.html
+++ b/source/_layouts/post.html
@@ -31,6 +31,10 @@ single: true
     <div id="disqus_thread" aria-live="polite">{% include post/disqus_thread.html %}</div>
   </section>
 {% endif %}
+  <section>
+    <h1>Comments</h1>
+    <div id="comments_note" aria-live="polite">{% include post/comments.html %}</div>
+  </section>
 </div>
 {% unless page.sidebar == false %}
 <aside class="sidebar">
