--- a/source/_layouts/page.html
+++ b/source/_layouts/page.html
@@ -30,6 +30,10 @@ layout: default
     <div id="disqus_thread" aria-live="polite">{% include post/disqus_thread.html %}</div>
   </section>
 {% endif %}
+  <section>
+    <h1>Comments</h1>
+    <div id="comments_note" aria-live="polite">{% include post/comments.html %}</div>
+  </section>
 </div>
 {% unless page.sidebar == false %}
 <aside class="sidebar">
