--- a/sass/custom/_fonts.scss
+++ b/sass/custom/_fonts.scss
@@ -2,9 +2,9 @@
 // To give it a try, uncomment some of the lines below rebuild your blog, and see how it works. your sites's.
 // If you love to use Web Fonts, you also need to add some lines to source/_includes/custom/head.html
 
-$sans: "Ubuntu", sans-serif;
-$serif: "Ubuntu", serif;
-$mono: "Ubuntu Mono", monospace;
-$heading-font-family: "Ubuntu", sans-serif;
-$header-title-font-family: "Ubuntu", sans-serif;
-$header-subtitle-font-family: "Ubuntu", sans-serif;
+$sans: sans-serif;
+$serif: sans-serif;
+$mono: monospace;
+$heading-font-family: sans-serif;
+$header-title-font-family: sans-serif;
+$header-subtitle-font-family: sans-serif;
