--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -24,3 +24,9 @@ body>div#main {
 #bio div.contacts ul li {
   display:inline;
 }
+.embed-video-container {
+    width: 50%;
+}
+.ratio-4-3 {
+    padding-bottom: 25%;
+}
