--- a/source/_includes/custom/footer.html
+++ b/source/_includes/custom/footer.html
@@ -1,4 +1,3 @@
 <p>
-  Copyright &copy; {{ site.time | date: "%Y" }} - {{ site.author }} -
-  <span class="credit">Powered by <a href="http://octopress.org">Octopress</a></span>
+This work is openly licensed via <a href="https://creativecommons.org/licenses/by/4.0/">CC BY 4.0</a> - {{ site.time | date: "%Y" }} - {{ site.author }}
 </p>
